{
    "name": "GameInput",
    "maps": [
        {
            "name": "Main",
            "id": "74fdf8f1-d5f8-4664-bb1f-9e85170287b5",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "446b8348-699c-4224-bc39-bc83af5ca999",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "1d2be9e6-defa-4810-a7b4-670fdd12de13",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "831b37d2-e940-4b4a-a8a5-03fcb210a7db",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9913eb89-0299-4c37-8734-06b4cb657433",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}